# skelz-hackathon

./: .cursorignore  .cursorrules  .editorconfig  .gitignore  .pre-commit-config.yaml  Brewfile  Cargo.toml  LICENSE  Makefile  README.md
.github/: CODEOWNERS  CONTRIBUTING.md
.github/workflows/: ci.yml  container-signing.yml  legacy-signing.yml  private-key-signing.yml  publish.yml
cli/: CHANGELOG.md  Cargo.toml  Makefile  README.md  rust-toolchain.toml
cli/examples/: attach.sh  pull.sh  push.sh  sign_image.rs  signature.json  skelz-signature.json
cli/idls/: skelz.json
cli/src/: lib.rs  main.rs  oci.rs
cli/tests/: help.rs
contracts/: Anchor.toml  Cargo.toml  Makefile  README.md
contracts/programs/skelz/: Cargo.toml
contracts/programs/skelz/src/: lib.rs
contracts/tests/rust_client/: Cargo.toml
contracts/tests/rust_client/idls/: skelz.json
contracts/tests/rust_client/src/: main.rs
docs/: diagram.md
docs/adrs/: 0001-architecture-et-choix-tech.md
scripts/: demo.sh
test/cypherpunk-demo-image/: Dockerfile  demo.crt  demo.sig  demo.txt  solana.json
