[package]
name = "skelz"
edition = "2021"
version = "0.1.0"
license = "MIT"
repository = "https://github.com/kevredlabs/skelz-hackathon"

[lib]
name = "skelz"
path = "src/lib.rs"

[[bin]]
name = "skelz"
path = "src/main.rs"
[dependencies]
anyhow = "1.0"
thiserror = "1.0"
clap = { version = "4.5", features = ["derive"] }
directories = "5.0"
dirs-next = "2.0"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
solana-client = "1.18"
solana-sdk = "1.18"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
