[package]
name = "skelz"
edition = "2021"
version = "0.1.0"
license = "MIT"
repository = "https://github.com/kevredlabs/skelz-hackathon"

[lib]
name = "skelz"
path = "src/lib.rs"

[[bin]]
name = "skelz"
path = "src/main.rs"
[dependencies]
anyhow = "1.0"
thiserror = "1.0"
clap = { version = "4.5", features = ["derive"] }
directories = "5.0"
dirs-next = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
solana-client = "1.18"
solana-sdk = "1.18"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
reqwest = { version = "0.11", features = ["json"] }
sha2 = "0.10"
tokio = { version = "1.0", features = ["full"] }
base64 = "0.21"
oci-client = "0.15"
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
