[package]
name = "skelz"
edition = "2021"
version = "0.1.0"
license = "MIT"
repository = "https://github.com/kevredlabs/skelz-hackathon"
description = "Decentralized container image registry CLI for Solana blockchain"
authors = ["Kevred Labs <contact@kevredlabs.com>"]
keywords = ["solana", "docker", "container", "registry", "signature", "blockchain"]
categories = ["command-line-utilities", "development-tools", "cryptography"]
readme = "README.md"
homepage = "https://github.com/kevredlabs/skelz-hackathon"
documentation = "https://docs.rs/skelz"

[lib]
name = "skelz"
path = "src/lib.rs"

[[bin]]
name = "skelz"
path = "src/main.rs"
[dependencies]
anyhow = "1.0"
thiserror = "1.0"
clap = { version = "4.5", features = ["derive"] }
directories = "5.0"
dirs-next = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
solana-client = "1.17"
solana-sdk = "1.17"
solana-transaction-status = "1.17"
anchor-client = "0.30.1"
anchor-lang = "0.30.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
reqwest = { version = "0.11", features = ["json"] }
sha2 = "0.10"
hex = "0.4"
tokio = { version = "1.0", features = ["full"] }
base64 = "0.21"
bincode = "1.3"
chrono = { version = "0.4", features = ["serde"] }
bs58 = "0.5"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
